Links, form autocomplete, width on mobilewere fixed

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -18,6 +18,7 @@
     transition: background-color $transition-duration, color $transition-duration;
 
     &:hover {
+      cursor: pointer;
       background-color: $color-beige;
       color: $color-dark-gray;
     }
