--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -51,6 +51,13 @@
     }
   }
 
+  &__link {
+    transition: color, $transition-duration;
+    &:hover {
+      color: $color-light-gray;
+    }
+  }
+
   &__icons {
     margin-bottom: 30px;
 
@@ -69,6 +76,11 @@
   &__icon {
     display: inline-block;
     margin-right: 20px;
+    transition: transform $transition-duration;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__info {
