--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -35,5 +35,12 @@
       outline: none;
       border-color: $color-dark-gray;
     }
+
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover, 
+    &:-webkit-autofill:focus, 
+    &:-webkit-autofill:active  {
+        -webkit-box-shadow: 0 0 0 100px $color-beige inset;
+    }
   }
 }
