--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -32,6 +32,14 @@
     }
   }
 
+  &__icon {
+    transition: transform $transition-duration;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+
   &__item {
     font-size: 18px;
     line-height: 24px;
@@ -42,6 +50,12 @@
     margin-top: 30px;
     border-bottom: 1px solid $color-light-medium-gray;
     padding-bottom: 10px;
+
+    transition: color $transition-duration;
+
+    &:hover {
+      color: $color-olive;
+    }
 
     @include onTablet {
       margin-top: 50px;
@@ -54,7 +68,7 @@
     }
 
     @include onLaptop {
-      color: $color-dark-olive;
+      color: $color-dark-gray;
     }
   }
 }
